<resources>
    <string name="app_name">smartlife</string>
    <string name="online">设备在线</string>
    <string name="alert_device_offline">设备离线，无法添加</string>
    <string name="menu_manage_group">管理群组设备</string>
    <string name="menu_edit_groupname">修改群组名称</string>
    <string name="alert_group_isfull">群组已满</string>
    <string name="gateway_working">网关工作中...</string>
    <string name="gateway_function">网关设备可以为蓝牙Mesh的设备提供远程控制的能力</string>
    <string name="alert_check_device">请至少选择一个设备</string>
    <string name="bluetooth_close">蓝牙未开启</string>
    <string name="open_bluetooth">请先开启蓝牙功能</string>
    <string name="add_deivce_fail">添加失败</string>
    <string name="add_device_success">成功添加%d个设备</string>
    <string name="add_bluetooth">正在添加蓝牙设备...</string>
    <string name="title_discover_deviceToConnect">发现待连接的设备</string>
    <string name="alert_discover_device">发现%d个设备</string>
    <string name="alert_discover_gateway">发现%d个网关设备</string>
    <string name="newgateway">新网关</string>
    <string name="newdevice">新设备</string>
    <string name="tip">Tip</string>
    <string name="open_gps">请打开 GPS(定位)服务</string>
    <string name="btn_scan">扫描</string>
    <string name="txt_scan_bluetooth">通过蓝牙扫描新设备</string>
    <string name="add_group">Create Group</string>
    <string name="swtich_string">swtich</string>
    <string name="swtich_open">open</string>
    <string name="swtich_close">close</string>
    <string name="timer_list_empty">No time data</string>
    <string name="txt_onlyonce">Only one time</string>
    <string name="add_timer">Add timing</string>
    <string name="alert_confirm_delete_group">confirm delete?</string>
    <string name="alert_white_mode">White light mode opening</string>
    <string name="alert_color_mode">Color light mode opening</string>
    <string name="delete_group">ungroup</string>
    <string name="device_condition">device</string>
    <string name="txt_third">Third party access</string>
    <string name="txt_add_group_added">Already added</string>
    <string name="txt_add_group_unadd">Not added</string>
    <string name="txt_repeat">repeat</string>
    <string name="txt_switch">switch</string>
    <string name="ifttt_use_nodevice_describe">Please first add IFTTT supporting devices, or contact device suppliers.</string>
    <string name="ifttt_use_noenquipment">Devices that do not support IFTTT</string>
    <string name="googlehome_use_no">Devices that do not support IFTTT</string>
    <string name="googlehome_use_noenquipment">Devices that do not support Google Home</string>
    <string name="echo_use_unfold">Open</string>
    <string name="echo_use_next">Immediate use</string>
    <string name="echo_use_nodevice">Devices that do not support Echo</string>
    <string name="echo_use_nodevice_describe">Please first add Echo supporting devices, or contact device suppliers.</string>
    <string name="dialog_delcolor">Confirm deletion?</string>
    <string name="dialog_title_delScene">Is it sure to delete the scene?</string>
    <string name="dialog_delScene_content">After the scene is deleted, the device task will not be executed properly</string>
    <string name="alert_condition_task_equal">The same equipment can not be used as a condition and task at the same time</string>
    <string name="alert_del_group_success">Dissolve group success</string>
    <string name="alert_mode_startmusic">Open the music mode</string>
    <string name="alert_mode_endmusic">Close the music mode</string>
    <string name="alert_scene_execute">Scene execution success</string>
    <string name="alert_group_add_sucess">Group creation success</string>
    <string name="alert_group_name_null">Please enter the group name</string>
    <string name="alert_location_permission_fail">Access failure of mobile phone positioning</string>
    <string name="alert_choose_function">Please choose at least one function</string>
    <string name="alert_input_scene_name">Please enter the scene name</string>
    <string name="alert_input_task">Please add a task</string>
    <string name="alert_create_scene_success">Create scene success</string>
    <string name="txt_commonuse_light">brightness</string>
    <string name="txt_commonuse_temp">Cold and warm</string>
    <string name="seekbar_pick_btnOK">complete</string>
    <string name="btn_commonuse">Common function</string>
    <string name="btn_commonuse_hide">Concealment of common functions</string>
    <string name="txt_day0">Sunday</string>
    <string name="txt_day1">Monday</string>
    <string name="txt_day2">Tuesday</string>
    <string name="txt_day3">Wednesday</string>
    <string name="txt_day4">Thursday</string>
    <string name="txt_day5">Friday</string>
    <string name="txt_day6">Saturday</string>
    <string name="title_add_timer">Add timing</string>
    <string name="title_choose_function">Choose function</string>
    <string name="title_choosedevice">Choose device</string>
    <string name="title_choose_timer">timing</string>
    <string name="title_choose_delay">delayed</string>
    <string name="alert_colorisnull">Please choose a color</string>
    <string name="seekbar_1">Dimming</string>
    <string name="seekbar_2">Color temperature</string>
    <string name="seekbar_3">Plain colourful</string>
    <string name="device_type_1">lighting</string>
    <string name="device_type_2">switch</string>
    <string name="device_type_3">Socket</string>
    <string name="device_type_4">lighting(bluetooth)</string>
    <string name="home_scene">Intelligent scene</string>
    <string name="ty_smart_scene_start">execute</string>
    <string name="scene_item1">Home</string>
    <string name="scene_item2">Be away from home</string>
    <string name="scene_item3">Get up</string>
    <string name="scene_item4">Sleep</string>
    <string name="add_scene">Add the scene</string>
    <string name="save_scene">save</string>
    <string name="txt_current_city">Current city</string>
    <string name="title_select_city">Choose city</string>
    <string name="title_select_device_type">Select device type</string>
    <string name="title_select_condition">Selection conditions</string>
    <string name="txt_select_condition">Select the conditions for the execution of the task</string>
    <string name="txt_location_city">Current location address</string>
    <string name="txt_city">city</string>
    <string name="ty_smart_scene_error_enter_name">Please enter the scene name</string>
    <string name="ty_smart_scene_add_condition">First step: add conditions</string>
    <string name="ty_smart_scene_add_notadded">No added conditions (no addition, direct manual execution)</string>
    <string name="ty_smart_scene_add_newwork">Second step: add the task</string>
    <string name="ty_smart_scene_add_notaddedwork">No added task</string>
    <string name="action_settings">Settings</string>
    <string name="device_list">Device list</string>
    <string name="share_list">Share list</string>
    <string name="reNickName">ReNickName</string>
    <string name="ec_start">Start EZConfig</string>
    <string name="ec_cancel">Cancel EZConfig</string>
    <string name="remove_device">Remove Device</string>
    <string name="ap_start">Start APConfig</string>
    <string name="offline">Off-line</string>
    <string name="IntranetControl">Online-Intranet</string>
    <string name="OnlineControl">Online</string>
    <string name="Confirm">Confirm</string>
    <string name="at_login_sns">Sign in with social media account</string>
    <string name="binding">Binding&#046;&#046;</string>
    <string name="cancel_tip">OK</string>
    <string name="click_bind_phone">Tap bind phone number</string>
    <string name="click_set_neekname">Tap to set your name</string>
    <string name="contact_use_tip">You sign in with %s account</string>
    <string name="env_preview">(Preview)</string>
    <string name="env_wrong_tip">The device is online, while App is running under preview
        environment. Thus not controllable
    </string>
    <string name="ty_loading">Loading…</string>
    <string name="every_week_five">Every Friday</string>
    <string name="every_week_four">Every Thursday</string>
    <string name="every_week_one">Every Monday</string>
    <string name="every_week_seven">Every Sunday</string>
    <string name="every_week_six">Every Saturday</string>
    <string name="every_week_three">Every Wednesday</string>
    <string name="every_week_two">Every Tuesday</string>
    <string name="experience_center">Experience center</string>
    <string name="experience_center_enter">Enter experience center</string>
    <string name="firmware_device_updating">Updating: device control module</string>
    <string name="firmware_gw_updating">Updating:connection module</string>
    <string name="firmware_has_upgrade_title">New device firmware</string>
    <string name="firmware_no_update_one">Version:</string>
    <string name="firmware_no_update_title">Firmware is the latest version</string>
    <string name="firmware_upgrade_dev">Device control module</string>
    <string name="firmware_upgrade_failure_description">Please restart the device and try again
    </string>
    <string name="firmware_upgrade_gw">Connection module:</string>
    <string name="firmware_upgrade_now">Upgrade now</string>
    <string name="gesture_password_forget">Forgot pattern password</string>
    <string name="gesture_password_input_limit">Trying too often, please retry after %d minutes
    </string>
    <string name="gesture_password_input_new">New pattern password</string>
    <string name="gesture_password_input_original">Enter correct pattern password</string>
    <string name="gesture_password_reset">Whether to reset pattern password?</string>
    <string name="gesture_password_set_successful">Successfully set your pattern</string>
    <string name="home_no_device">Empty List</string>
    <string name="input_login_password">Enter login password</string>
    <string name="input_password_again">Enter password again</string>
    <string name="key_num_not_reasonable">Password length is 6-13 characters, please try again
    </string>
    <string name="key_num_not_uniform">Password not the same, please try again</string>
    <string name="local_space_no_enough">Local space not enough</string>
    <string name="login_find_password">Request password</string>
    <string name="login_forget">Forgot password</string>
    <string name="login_forget_photo">Enter registered number</string>
    <string name="login_password">Login password</string>
    <string name="login_register">Register</string>
    <string name="login_space">|</string>
    <string name="login_tip">Smart life. Smart living</string>
    <string name="my_smart_home_prepare">Devices(Prepare)</string>
    <string name="never_bind">Unbound</string>
    <string name="no_timer_list_tip">Auto mode is on, please add a timer</string>
    <string name="package_mode_demo">DEMO</string>
    <string name="please_input_wifi_password">Please input password</string>
    <string name="refind_password">Found login password</string>
    <string name="single_week_five">Fri</string>
    <string name="single_week_four">Thu</string>
    <string name="single_week_one">Mon</string>
    <string name="single_week_seven">Sun</string>
    <string name="single_week_six">Sat</string>
    <string name="single_week_three">Wed</string>
    <string name="single_week_two">Tue</string>
    <string name="taste_device_support">It\'s for demo purposes only</string>
    <string name="timer_task">Task</string>
    <string name="timer_time">Time</string>
    <string name="ty_add_device_find_dev">Find device</string>
    <string name="ty_add_device_initialize">Initialize device</string>
    <string name="ty_add_device_reg_cloud">Register device to the cloud</string>
    <string name="go_next">Next</string>
    <string name="operation_delete">Delete</string>
</resources>