<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/app_bg_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/select_device_btn1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_devicetype_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/device_type_1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/ts_16"
            android:layout_weight="1.0"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/arrow_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_device_btn2"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_device_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/device_type_2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/ts_16"
            android:layout_weight="1.0"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/arrow_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_device_btn3"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_devicetype_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/device_type_3"
            android:textColor="@color/textColor"
            android:textSize="@dimen/ts_16"
            android:layout_weight="1.0"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/arrow_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
