<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/list_bg_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:minHeight="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_device_list_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ty_devicelist_dot_gray" />

        <ImageView
            android:id="@+id/iv_device_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_device_list_dot"
            android:scaleType="fitXY"
            android:src="@drawable/ty_device_cz02" />

        <TextView
            android:id="@+id/tv_device"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mg_10"
            android:layout_toRightOf="@+id/iv_device_icon"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="?attr/app_name"
            android:textColor="?attr/list_primary_color" />


        <ImageView
            android:id="@+id/iv_device_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/arrow_more" />
        <LinearLayout
            android:id="@+id/common_device_btnOffLayout"
            android:layout_toLeftOf="@id/iv_device_arrow"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/common_device_btnOff"
                android:src="@drawable/ty_device_power_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/common_device_item_txtOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_device"
            android:layout_below="@id/tv_device"
            android:layout_marginTop="5dp"
            android:text="@string/offline"
            android:textColor="@color/google_green"
            android:textSize="@dimen/ts_14"
            tools:text="设备在线" />
        <TextView
            android:id="@+id/common_device_item_txtFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_toRightOf="@id/common_device_item_txtOnline"
            android:layout_below="@id/tv_device"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_commonuse"
            android:textColor="@color/google_green"
            android:textSize="@dimen/ts_14"
            tools:text="常用功能" />

        <View
            android:id="@+id/line_long"
            style="@style/line_long"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"></View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/common_device_functionLayout"
        android:visibility="gone"
        android:layout_marginLeft="30dp"
        android:gravity="center|top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_device"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/common_device_lightLayout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_commonuse_light"
                android:textColor="?attr/list_primary_color"
                android:textSize="@dimen/ts_14"
                tools:text="亮度" />
            <TextView
                android:id="@+id/common_device_txtLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="?attr/list_sub_color"
                android:textSize="@dimen/ts_14"
                tools:text="100" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/common_device_tempLayout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_temp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_commonuse_temp"
                android:textColor="?attr/list_primary_color"
                android:textSize="@dimen/ts_14"
                tools:text="色温" />
            <TextView
                android:id="@+id/common_device_txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="?attr/list_sub_color"
                android:textSize="@dimen/ts_14"
                tools:text="100" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="?attr/fragment_bg_color"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
</LinearLayout>